changed the way section 2 height to 25%,sections 3,4 and 5 are no longer messured in % but by the content in them fixing probles when used on mobile such as the text going into other sectors,nav bar is no longer % as well making it so the buttons won't cramp into each other or go off screen added links the words here sofia and bulgaria,here goes to gallery and the other 2 to the wiki pages made it so links are pinkish as well as the nav bar text when hovering it will be a bit darker,changed the tab image to a vector since it look cleaner,removed the iframe to the proect the projects will now only be viewable in the gallery page

--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
 			  left: 0;
 			  z-index: 9999;
 			  width: 100%;
-			  height: 9%;
+			  
 			  background-color: black;
 			
 			  overflow: hidden;
@@ -27,7 +27,7 @@
 
              .fixed-nav-bar a:hover {
              
-             color: #b8b1b0;
+             color: #d48f83;
              }
 
              .main {
@@ -55,24 +55,24 @@
 	                          }
 
 	                         .section-2{
-							  height: 35%;
+							  height: 25%;
 		                     background-image: url(ddd1.jpg);
                              background-attachment: fixed;
                              background-size: 100% 100%;;
 	                         }
 
 	                         .section-3{
-							 height: 30%;
+							 
 		                     background-image: linear-gradient(#030303, #410433);
 							 
 
 	                         }	  
 							 .section-4{
-							 height: 33%;
+							 
 		                     background-image: linear-gradient(	#66003f, #520ee5, #200d88);
 	                         }	  
 							 .section-5{
-							 height: 20vh;
+							 
 		                     background-image: linear-gradient(#2e007c, #090643, #030303);
 	                         }	  
                                                        h1{													   
@@ -96,6 +96,21 @@
                                                            max-width: 100%;
                                                            height: auto;
                                                            } 
+														        a:link {
+                                                                color: green;
+                                                                background-color: transparent;
+                                                                text-decoration: none;
+}
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: #d48f83;
+  background-color: transparent;
+  text-decoration: underline;
+}
 																		
                                                                   	 
 																	 
